[package]
name = "declio"
version = "0.2.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2018"
description = "A declarative I/O serialization library."
readme = "../README.md"
repository = "https://github.com/agausmann/declio"
license = "MIT"
keywords = ["binary", "io", "declarative", "bidirectional"]
categories = ["encoding", "parsing"]

[features]
default = ["derive"]
derive = ["declio_derive"]

[dependencies]
declio_derive = { path = "../declio_derive", version = "0.2", optional = true }
